--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,80 @@
 buildscript {
 
     ext {
-        kotlin_version = '1.3.31'
+        version = [
+                jetbrains    : [
+                        kotlin    : "1.3.31",
+                        coroutines: "1.1.1"
+                ],
+                androidx     : [
+                        lifecycle: "2.2.0-alpha01",
+                        room     : "2.0.0",
+                        appcompat: "1.0.2",
+                        cardview : "1.0.0",
+                        vector   : [
+                                drawable: "1.0.1",
+                                animated: "1.0.0"
+                        ],
+                        test     : [
+                                runner  : "1.1.1",
+                                rules   : "1.1.1",
+                                junit   : "1.1.0",
+                                espresso: "3.1.1"
+                        ]
+                ],
+                material     : "1.0.0",
+                pageindicator: "1.0.1",
+                junit        : "4.12",
+                powermock    : "1.6.6"
+        ]
 
-        mock_version = "1.6.6"
-        espresso_version = '3.1.1'
-
-        dokka_version = '0.9.17'
+        deps = [
+                instrumentationRunner: "androidx.test.runner.AndroidJUnitRunner",
+                jetbrains            : [
+                        kotlin    : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$version.jetbrains.kotlin",
+                        coroutines: [
+                                core   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$version.jetbrains.coroutines",
+                                android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$version.jetbrains.coroutines"
+                        ]
+                ],
+                androidx             : [
+                        lifecycle: [
+                                extensions: "androidx.lifecycle:lifecycle-extensions:$version.androidx.lifecycle",
+                                viewmodel : "androidx.lifecycle:lifecycle-viewmodel-ktx:$version.androidx.lifecycle",
+                                compiler  : "androidx.lifecycle:lifecycle-compiler:$version.androidx.lifecycle",
+                        ],
+                        room     : [
+                                runtime : "androidx.room:room-runtime:$version.androidx.room",
+                                compiler: "androidx.room:room-compiler:$version.androidx.room",
+                                testing : "androidx.room:room-testing:$version.androidx.room"
+                        ],
+                        appcompat: "androidx.appcompat:appcompat:$version.androidx.appcompat",
+                        cardview : "androidx.cardview:cardview:$version.androidx.cardview ",
+                        vector   : [
+                                drawable: "androidx.vectordrawable:vectordrawable:$version.androidx.vector.drawable",
+                                animated: "androidx.vectordrawable:vectordrawable-animated:$version.androidx.vector.animated"
+                        ],
+                        test     : [
+                                runner  : "androidx.test:runner:1.1.1",
+                                rules   : "androidx.test:rules:1.1.1",
+                                junit   : "androidx.test.ext:junit:1.1.0",
+                                espresso: [
+                                        idling : "androidx.test.espresso:espresso-idling-resource:$version.androidx.test.espresso",
+                                        core   : "androidx.test.espresso:espresso-core:$version.androidx.test.espresso",
+                                        contrib: "androidx.test.espresso:espresso-contrib:$version.androidx.test.espresso"
+                                ]
+                        ]
+                ],
+                material             : "com.google.android.material:material:$version.material",
+                pageindicator        : "com.romandanylyk:pageindicatorview:$version.pageindicator",
+                junit                : "junit:junit:$version.junit",
+                powermock            : [
+                        module      : "org.powermock:powermock-module-junit4:$version.powermock",
+                        rule        : "org.powermock:powermock-module-junit4-rule:$version.powermock",
+                        api         : "org.powermock:powermock-api-mockito:$version.powermock",
+                        classloading: "org.powermock:powermock-classloading-xstream:$version.powermock"
+                ]
+        ]
     }
 
     repositories {
@@ -20,8 +88,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:$dokka_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
+        classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:0.9.17"
     }
 }
 
