--- a/safedialog/build.gradle
+++ b/safedialog/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
+apply from: '../values.gradle'
+
 android {
     compileSdkVersion 28
 
