--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 6
-        versionName version
+        versionName git.version.execute().text.trim()
 
         testInstrumentationRunner deps.instrumentationRunner
 
