--- a/iconanim/build.gradle
+++ b/iconanim/build.gradle
@@ -4,13 +4,14 @@ apply plugin: 'kotlin-android'
 apply from: '../values.gradle'
 
 android {
+
     compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
-        versionName version
+        versionName git.version.execute().text.trim()
 
         testInstrumentationRunner deps.instrumentationRunner
 
