--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,6 +88,7 @@ dependencies {
 
     implementation deps.androidx.appcompat
     implementation deps.androidx.cardview
+    implementation deps.androidx.constraintlayout
 
     implementation deps.androidx.vector.drawable
     implementation deps.androidx.vector.animated
