--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:theme="@style/App.Light.UI">
 
         <activity
-                android:name="sgtmelon.scriptum.screen.view.SplashActivity"
+                android:name=".screen.view.SplashActivity"
                 android:configChanges="keyboardHidden|orientation|screenSize"
                 android:theme="@style/App.Splash">
             <intent-filter>
@@ -22,9 +22,9 @@
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.screen.view.intro.IntroActivity"
+                android:name=".screen.view.intro.IntroActivity"
                 android:configChanges="keyboardHidden|orientation|screenSize"
-                android:parentActivityName="sgtmelon.scriptum.screen.view.SplashActivity"
+                android:parentActivityName=".screen.view.SplashActivity"
                 android:theme="@style/App.Intro">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -33,7 +33,7 @@
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.screen.view.main.MainActivity"
+                android:name=".screen.view.main.MainActivity"
                 android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -42,8 +42,8 @@
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.screen.view.note.NoteActivity"
-                android:parentActivityName="sgtmelon.scriptum.screen.view.main.MainActivity">
+                android:name=".screen.view.note.NoteActivity"
+                android:parentActivityName=".screen.view.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.EDIT"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -51,9 +51,9 @@
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.screen.view.preference.PreferenceActivity"
+                android:name=".screen.view.preference.PreferenceActivity"
                 android:configChanges="keyboardHidden"
-                android:parentActivityName="sgtmelon.scriptum.screen.view.main.MainActivity">
+                android:parentActivityName=".screen.view.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
@@ -61,9 +61,19 @@
         </activity>
 
         <activity
-                android:name="sgtmelon.scriptum.screen.view.DevelopActivity"
+                android:name=".screen.view.NotificationActivity"
                 android:configChanges="keyboardHidden"
-                android:parentActivityName="sgtmelon.scriptum.screen.view.preference.PreferenceActivity"
+                android:parentActivityName=".screen.view.main.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <activity
+                android:name=".screen.view.DevelopActivity"
+                android:configChanges="keyboardHidden"
+                android:parentActivityName=".screen.view.preference.PreferenceActivity"
                 android:theme="@style/App.Dark.UI">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
