--- a/values.gradle
+++ b/values.gradle
@@ -14,7 +14,7 @@ ext {
             androidx     : [
                     lifecycle       : "2.2.0-alpha01",
                     room            : "2.0.0",
-                    appcompat       : "1.0.2",
+                    appcompat       : "1.1.0-alpha05",
                     cardview        : "1.0.0",
                     constraintlayout: "1.1.3",
                     vector          : [
@@ -28,7 +28,7 @@ ext {
                             espresso: "3.1.1"
                     ]
             ],
-            material     : "1.0.0",
+            material     : "1.1.0-alpha06",
             pageindicator: "1.0.1",
             junit        : "4.12",
             powermock    : "1.6.6"
