--- a/values.gradle
+++ b/values.gradle
@@ -15,7 +15,7 @@ ext {
     ]
 
     google = [
-            material: "com.google.android.material:material:1.1.0-alpha06"
+            material: "com.google.android.material:material:1.0.0"
     ]
 
     androidx = [
