Optimize and refactor code
Tag: #Refactor

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="sgtmelon.scriptum">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
             android:allowBackup="true"
             android:fullBackupContent="@xml/backup_descriptor"
@@ -12,80 +13,72 @@
             android:supportsRtl="true"
             android:theme="@style/App.Light.UI">
 
-        <activity
-                android:name=".screen.ui.SplashActivity"
-                android:configChanges="keyboardHidden|orientation|screenSize"
-                android:theme="@style/App.Splash">
+        <activity android:name=".screen.ui.SplashActivity"
+                  android:configChanges="keyboardHidden|orientation|screenSize"
+                  android:theme="@style/App.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
 
-        <activity
-                android:name=".screen.ui.intro.IntroActivity"
-                android:configChanges="keyboardHidden|orientation|screenSize"
-                android:parentActivityName=".screen.ui.SplashActivity"
-                android:theme="@style/App.Intro">
+        <activity android:name=".screen.ui.intro.IntroActivity"
+                  android:configChanges="keyboardHidden|orientation|screenSize"
+                  android:parentActivityName=".screen.ui.SplashActivity"
+                  android:theme="@style/App.Intro">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
-        <activity
-                android:name=".screen.ui.main.MainActivity"
-                android:windowSoftInputMode="adjustPan">
+        <activity android:name=".screen.ui.main.MainActivity"
+                  android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.HOME"/>
             </intent-filter>
         </activity>
 
-        <activity
-                android:name=".screen.ui.note.NoteActivity"
-                android:parentActivityName=".screen.ui.main.MainActivity">
+        <activity android:name=".screen.ui.note.NoteActivity"
+                  android:parentActivityName=".screen.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.EDIT"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
-        <activity
-                android:name=".screen.ui.preference.PreferenceActivity"
-                android:configChanges="keyboardHidden"
-                android:parentActivityName=".screen.ui.main.MainActivity">
+        <activity android:name=".screen.ui.preference.PreferenceActivity"
+                  android:configChanges="keyboardHidden"
+                  android:parentActivityName=".screen.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
-        <activity
-                android:name=".screen.ui.notification.NotificationActivity"
-                android:configChanges="keyboardHidden"
-                android:parentActivityName=".screen.ui.main.MainActivity">
+        <activity android:name=".screen.ui.notification.NotificationActivity"
+                  android:configChanges="keyboardHidden"
+                  android:parentActivityName=".screen.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
-        <activity
-                android:name=".screen.ui.notification.AlarmActivity"
-                android:configChanges="keyboardHidden"
-                android:parentActivityName=".screen.ui.main.MainActivity">
+        <activity android:name=".screen.ui.notification.AlarmActivity"
+                  android:configChanges="keyboardHidden"
+                  android:parentActivityName=".screen.ui.main.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
 
-        <activity
-                android:name=".screen.ui.DevelopActivity"
-                android:configChanges="keyboardHidden"
-                android:parentActivityName=".screen.ui.preference.PreferenceActivity"
-                android:theme="@style/App.Dark.UI">
+        <activity android:name=".screen.ui.DevelopActivity"
+                  android:configChanges="keyboardHidden"
+                  android:parentActivityName=".screen.ui.preference.PreferenceActivity"
+                  android:theme="@style/App.Dark.UI">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
                 <category android:name="android.intent.category.DEFAULT"/>
