Add extension module for add modules acess func
Tag: #New

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,11 +65,10 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation project(":iconanim")
     implementation project(":idling")
     implementation project(":safedialog")
+    implementation project(":extension")
 
     //region Kotlin
 
