--- a/idling/build.gradle
+++ b/idling/build.gradle
@@ -11,6 +11,11 @@ android {
         targetSdkVersion 28
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     buildTypes {
         release {
             minifyEnabled false
