Add RollEntity json test
Tag: #Refactor #Test

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,5 +118,7 @@ dependencies {
     testImplementation powermock.api
     testImplementation powermock.classloading
 
+    testImplementation json.core
+
     //endregion
 }
